service launches, param route

--- a/src/components/Launches.astro
+++ b/src/components/Launches.astro
@@ -1,20 +1,9 @@
 ---
-import {type APISpaceXResponse} from '../types/api'
 import CardLaunch from './CardLaunch.astro';
+import { getLaunches } from '../services/spacex-launches.astro'
+import {type APISpaceXResponse} from '../types/api'
 
-const res = await fetch('https://api.spacexdata.com/v5/launches/query', {
-    method: 'POST',
-    headers: {
-        'Content-Type': 'aplication/json',
-    },
-    body: JSON.stringify({
-        query: {},
-        options: {
-            limit: 10
-        },
-    }),
-})
-const {docs: launches} = (await res.json()) as APISpaceXResponse
+const launches = await getLaunches() 
 
 console.log(launches);
 
