--- a/src/components/CardLaunch.astro
+++ b/src/components/CardLaunch.astro
@@ -12,7 +12,7 @@ const sucessText = success ? "Éxito" : "Fracaso"
 ---
 
 <a
- href={'/launch/${id}'}
+ href={`/launch/${id}`}
  class="rounded-lg border shadow-md
  bg-gray-800 border-gray-700
  hover:scale-105 hover:bg-gray-700
