--- a/src/pages/launch/[id].astro
+++ b/src/pages/launch/[id].astro
@@ -21,8 +21,12 @@ launch = promiseLaunch
 ---
 
 <Layout title='launch'>
-    <article>
-       <img src=`${launch.links.patch.small}` alt="">
-            {id}
+    <article class="flex flex-col items-center">
+        <img src=`${launch.links.patch.small}` alt="">
+        <h2 class="text-center text-4xl">{launch.name}</h2>
+        <p class="text-center">{launch.details}</p>
+        <p class="text-center">{launch.crew}</p>
+        <p class="text-center text-teal-400">{launch.date_local}</p>
     </article>
+    
 </Layout>
