preact, cliente visible & persist component

--- a/src/pages/launch/[id].astro
+++ b/src/pages/launch/[id].astro
@@ -25,7 +25,7 @@ launch = promiseLaunch
         <img src=`${launch.links.patch.small}` alt="">
         <h2 class="text-center text-4xl">{launch.name}</h2>
         <p class="text-center">{launch.details}</p>
-        <p class="text-center">{launch.crew}</p>
+        <p class="text-center">{launch.launchpad}</p>
         <p class="text-center text-teal-400">{launch.date_local}</p>
     </article>
     
