--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,11 @@
 ---
 import HeaderButton from "./HeaderButton.astro";
+import {Counter} from "./Counter"
 console.log('sd');
 
 ---
 
-<header class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:pax-6">
+<header transition:persist class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:pax-6">
     <div class="mx-auto text-center mb-8 lg:mb-16">
         <h2 class="mb-4 text-5xl tracking-tight font-extrabold text-white">
             Space launches 🚀
@@ -13,7 +14,7 @@ console.log('sd');
          All the information about SpaceX launches
         </p>
     </div>
-
+    <Counter client:visible/>
     <nav class="flex flex-col items-center justify-between w-full text-center md:flex-row">
         <HeaderButton class="text-white" href="/" ruta='/'>
             <svg slot='before' xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-rocket" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 13a8 8 0 0 1 7 7a6 6 0 0 0 3 -5a9 9 0 0 0 6 -8a3 3 0 0 0 -3 -3a9 9 0 0 0 -8 6a6 6 0 0 0 -5 3" /><path d="M7 14a6 6 0 0 0 -3 6a6 6 0 0 0 6 -3" /><path d="M15 9m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" /></svg>
