--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Launches from '../components/Launches.astro';
 
 ---
 
+<link rel="assetlinks.json file" href="https://aesthetic-sorbet-c6fde1.netlify.app/.well-known/assetlinks.json" />
 <Layout title="Welcome to Astro.">
 	<Launches></Launches>
 </Layout>
